--- a/Login_Register/login_register.html
+++ b/Login_Register/login_register.html
@@ -12,13 +12,12 @@
     <main class="page-wrap">
         <div class="hero">
             <div class="hero-left">
-                <div class="badge">AS — Gestão &amp; Performance</div>
+                <div class="badge">AS — Sistema, Gestão &amp; Performance</div>
                 <h1 class="hero-title">A AS nasce para desenvolver pessoas e formar pensadores críticos.</h1>
-                <p class="hero-sub">A inteligência artificial avança — nós desenvolvemos as habilidades humanas que
-                    continuam insubstituíveis: comunicação, gestão, inteligência emocional e performance.</p>
+                <p class="hero-sub">A verdade é simples: a inteligência artificial já está dominando processos, decisões e rotinas inteiras. E enquanto isso, muita gente está perdendo senso crítico, deixando de se desenvolver e abrindo mão das competências que realmente importam — comunicação, gestão de pessoas, inteligência emocional, performance, inglês e outras habilidades essenciais.</p>
                 <ul class="hero-list">
                     <li><strong>Material exclusivo</strong> + certificado ao participar da pesquisa.</li>
-                    <li><strong>Tempo estimado</strong> ~ 7–12 minutos</li>
+                    <li><strong>Tempo estimado</strong> ~ 3–6 minutos</li>
                     <li><strong>Meta</strong> Mapear dores e prioridades para novos cursos.</li>
                 </ul>
             </div>
