--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Protótipo AS — Página Longa</title>
+    <title>Home • AS</title>
     <link rel="stylesheet" href="Main/main.css">
+    <link rel="icon" type="image/png" href="logo_temporaria.png" />
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&family=Montserrat:wght@600;700&display=swap"
         rel="stylesheet">
