--- a/Login_Register/login_register.html
+++ b/Login_Register/login_register.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Login • AS — Gestão & Performance</title>
+    <title>Login • AS</title>
     <link rel="stylesheet" href="login_register.css">
 </head>
 
