--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
             <div style="text-align:right;">
                 <div class="muted">Contatos</div>
                 <div style="margin-top:6px;"><span class="pill">
-                    <a href="https://wa.me/551194337-0983
+                    <a href="https://wa.me/5511943370983
                     " target="_blank">
                             Anderson S — Founder & CEO
                     </a></span>
                 </div>
                 <div style="margin-top:6px;"><span class="pill">
-                    <a href="https://wa.me/551898132-0533
+                    <a href="https://wa.me/5518981320533
                     " target="_blank">
                             Antônio S — Co-Founder & CTO
                     </a></span>
