--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </section>
 
         <!-- COMO A AS ATUA HOJE -->
-        <section id="comoAsAtua" class="informacoes-as" aria-labelledby="atua-title">
+        <section id="comoAsAtua" class="card access-card" aria-labelledby="atua-title">
             <div class="card" role="region" aria-label="Como a AS atua hoje">
                 <h3 id="atua-title">Como a A.S atua hoje</h3>
         
