tirando traço index.html

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 </ul>
         
                 <p class="muted" style="margin-top:14px;">
-                    E este é apenas o começo — estamos construindo algo que vai transformar carreiras, negócios e a forma como as pessoas evoluem diante da inteligência artificial.
+                    E este é apenas o começo, estamos construindo algo que vai transformar carreiras, negócios e a forma como as pessoas evoluem diante da inteligência artificial.
                 </p>
             </div>
         </section>
