--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 
         <!-- COMO A AS ATUA HOJE -->
         <section id="comoAsAtua" class="card access-card" aria-labelledby="atua-title">
-            <div class="card" role="region" aria-label="Como a AS atua hoje">
+            <div role="region" aria-label="Como a AS atua hoje">
                 <h3 id="atua-title">Como a A.S atua hoje</h3>
         
                 <p class="muted">
