--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <!-- COMO A AS ATUA HOJE -->
         <section id="comoAsAtua" class="card access-card" aria-labelledby="atua-title">
             <div role="region" aria-label="Como a AS atua hoje">
-                <h3 id="atua-title">Como a A.S atua hoje</h3>
+                <h3 id="sobre-title">Como a A.S atua hoje</h3>
         
                 <p class="muted">
                     A crescente demanda por serviços, soluções e orientação estratégica deixou claro que era hora de consolidar tudo em uma única marca.
