--- a/Login_Register/login_register.html
+++ b/Login_Register/login_register.html
@@ -38,7 +38,7 @@
 
 
                         <label>Senha</label>
-                        <input id="login-senha" type="password" autocomplete="current-password" required />
+                        <input id="login-senha" type="password" required />
 
 
                         <button type="submit" class="btn-primary">Entrar</button>
@@ -53,7 +53,7 @@
 
 
                         <label>E‑mail</label>
-                        <input id="reg-email" type="email" autocomplete="email" required />
+                        <input id="reg-email" type="email" required />
 
 
                         <label>Senha</label>
