--- a/Login_Register/login_register.html
+++ b/Login_Register/login_register.html
@@ -34,7 +34,7 @@
                     <!-- LOGIN -->
                     <form id="form-login" class="form">
                         <label>Nome</label>
-                        <input id="login-nome" type="text" autocomplete="username" required />
+                        <input id="login-nome" type="text" required />
 
 
                         <label>Senha</label>
@@ -53,11 +53,11 @@
 
 
                         <label>E‑mail</label>
-                        <input id="reg-email" type="email" required />
+                        <input id="reg-email" type="text" required />
 
 
                         <label>Senha</label>
-                        <input id="reg-senha" type="password" autocomplete="new-password" required />
+                        <input id="reg-senha" type="password" required />
 
 
                         <button type="submit" class="btn-primary">Criar conta</button>
