--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button id="btnLogout" class="logout-btn">Sair</button>
             <div class="conteudo-left">
                 <div class="gestao-performace as">AS — Sistema, Gestão & Performance</div>
-                <h1>Nós estamos chegando para fazer história.</h1>
+                <h1>Nós estamos chegando para fazer história!</h1>
                 <p class="introducao">A Verdade é simples: a inteligência artificial já está dominando processos,
                     decisões e rotinas inteiras. E enquanto isso, muita gente está perdendo senso crítico,
                     deixando de se desenvolver e abrindo mão das competências que realmente importam.</p>
