--- a/Login_Register/login_register.html
+++ b/Login_Register/login_register.html
@@ -13,8 +13,10 @@
         <div class="hero">
             <div class="hero-left">
                 <div class="badge">AS — Sistema, Gestão &amp; Performance</div>
-                <h1 class="hero-title">A AS nasce para desenvolver pessoas e formar pensadores críticos.</h1>
-                <p class="hero-sub">A verdade é simples: a inteligência artificial já está dominando processos, decisões e rotinas inteiras. E enquanto isso, muita gente está perdendo senso crítico, deixando de se desenvolver e abrindo mão das competências que realmente importam — comunicação, gestão de pessoas, inteligência emocional, performance, inglês e outras habilidades essenciais.</p>
+                <h1 class="hero-title">Nós estamos chegando para fazer história!</h1>
+                <p class="hero-sub">A Verdade é simples: a inteligência artificial já está dominando processos,
+                    decisões e rotinas inteiras. E enquanto isso, muita gente está perdendo senso crítico,
+                    deixando de se desenvolver e abrindo mão das competências que realmente importam.</p>
                 <ul class="hero-list">
                     <li><strong>Material exclusivo</strong> + certificado ao participar da pesquisa.</li>
                     <li><strong>Tempo estimado</strong> ~ 3–6 minutos</li>
