--- a/Login_Register/login_register.html
+++ b/Login_Register/login_register.html
@@ -20,7 +20,8 @@
                 <ul class="hero-list">
                     <li><strong>Material exclusivo</strong> + certificado ao participar da pesquisa.</li>
                     <li><strong>Tempo estimado</strong> ~ 3–6 minutos</li>
-                    <li><strong>Meta</strong> Mapear dores e prioridades para novos cursos.</li>
+                    <li><strong>Objetivo</strong> Avaliar o nível real de maturidade profissional do mercado e mostrar, de forma clara e direta, o
+                        que está travando o crescimento da maioria das pessoas.</li>
                 </ul>
             </div>
 
