--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <!-- FINAL / FOOTER -->
         <footer id="contato" style="margin-top:36px;">
             <div>
-                <strong style="color:var(--white)">AS — Gestão & Performance</strong>
+                <strong style="color:var(--white)">AS — Sistema, Gestão &amp; Performance</strong>
                 <div class="muted" style="margin-top:6px;">Contato: contato@as-gestao.com · Direitos reservados © AS
                 </div>
             </div>
