--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <aside class="conteudo-right" aria-hidden="true">
                 <div class="mini-card">
                     <h4>O que você ganha</h4>
-                    <p>Material exclusivo + certificado ao participar da pesquisa.</p>
+                    <p>Participando, você libera acesso ao material exclusivo
+e garante seu direito ao certificado quando o primeiro curso for publicado.</p>
                 </div>
                 <div class="mini-card">
                     <h4>Tempo estimado</h4>
