--- a/Login_Register/login_register.html
+++ b/Login_Register/login_register.html
@@ -18,7 +18,8 @@
                     decisões e rotinas inteiras. E enquanto isso, muita gente está perdendo senso crítico,
                     deixando de se desenvolver e abrindo mão das competências que realmente importam.</p>
                 <ul class="hero-list">
-                    <li><strong>Material exclusivo</strong> + certificado ao participar da pesquisa.</li>
+                    <li><strong>Participando</strong>, você libera acesso ao material exclusivo
+e garante seu direito ao certificado quando o primeiro curso for publicado.</li>
                     <li><strong>Tempo estimado</strong> ~ 3–6 minutos</li>
                     <li><strong>Objetivo</strong> Avaliar o nível real de maturidade profissional do mercado e mostrar, de forma clara e direta, o
                         que está travando o crescimento da maioria das pessoas.</li>
