--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -21,7 +21,7 @@
             <aside class="panel">
                 <div class="stats">
                     <div>
-                        <div class="label">Usuários que responderam todas as perguntas</div>
+                        <div class="label">Usuários que responderam os testes</div>
                         <div id="completedCount" class="big">—</div>
                     </div>
                     <div>
