--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -46,7 +46,7 @@
             </section>
         </main>
 
-        <footer class="foot">Painel admin • AS — Gestão &amp; Performance</footer>
+        <footer class="foot">Painel admin • AS — Sistema &amp; Gestão &amp; Performance</footer>
     </div>
 
     <script src="admin.js"></script>
