--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -25,7 +25,7 @@
                         <div id="completedCount" class="big">—</div>
                     </div>
                     <div>
-                        <div class="label">Total de respostas</div>
+                        <div class="label">Total de testes</div>
                         <div id="totalAnswers" class="big">—</div>
                     </div>
                 </div>
@@ -34,8 +34,6 @@
 
                 <canvas id="chart" height="160"></canvas>
 
-                <div class="label small" style="margin-top:12px">Respondentes (clique no número para ver respostas)
-                </div>
                 <div id="respondents" class="list"></div>
             </aside>
 
